--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mystery Code - Blog</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Brighty Jiji Abraham</title>
+  <meta content="Brighty Jiji Abraham" name="description">
+  <meta content="Brighty Jiji Abraham" name="keywords">
 
   <!-- Google Fonts -->
   <link
