--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Brighty Jiji Abraham</title>
-  <meta content="Brighty Jiji Abraham" name="description">
+  <meta content="Hi I'm Brighty Jiji Abraham. This is my portfolio." name="description">
   <meta content="Brighty Jiji Abraham" name="keywords">
 
   <!-- Google Fonts -->
@@ -34,7 +34,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
       <div class="hero-container aos-init aos-animate" data-aos="fade-in">
         <div class="profile">
-          <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+          <img src="assets/img/profile-img.jpg" alt="Brighty Jiji Abraham" class="img-fluid rounded-circle">
           <h1 class="text-light"><a href="index.html">Brighty Jiji Abraham</a></h1>
           <p class="padding20">I'm <span class="typed"
               data-typed-items="Designer, Developer, Photographer , Artificial Intelligence and Machine Learning Student , Video Editor">Student
