Added structured data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <meta content="Hi I'm Brighty Jiji Abraham. This is my portfolio." name="description">
   <meta content="Brighty Jiji Abraham" name="keywords">
 
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "name": "Brighty Jiji Abraham",
+      "description": "Currently a student at Sree Buddha College of Engineering, Pattoor. Studing course B.Tech Computer Science Engineering (Artificial Intelligence & Machine Learnig).",
+      "image": "https://brighty-jiji-abraham.ml/assets/img/profile-img.jpg",
+      "gender": "http://schema.org/Male",
+      "birthDate": "20 January 2002",
+      "Nationality": "Indian",
+      "telephone": "+919207863690",
+      "email": "brightymct@gmail.com",
+      "sameAs": ["https://brighty-jiji-abraham.ml","https://twitter.com/B_J_A_008","https://www.linkedin.com/in/brightyjijiabraham","https://github.com/BrightyJijiAbraham","https://www.facebook.com/brighty.jiji.abraham","https://www.instagram.com/brighty.jiji.abraham"]
+    }
+    </script>
+
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
