--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/css.css" rel="stylesheet">
+  
+  <!-- Clarity tracking code for https://brighty-jiji-abraham.live/ -->
+  <script>    
+    (function(c,l,a,r,i,t,y){        
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    
+    })(window, document, "clarity", "script", "hmdopi15mj");
+  </script>
 
 </head>
 
