--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <meta content="Hi I'm Brighty Jiji Abraham. This is my portfolio." name="description">
   <meta content="Brighty Jiji Abraham" name="keywords">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737742674511070" crossorigin="anonymous"></script>
+
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
       "@type": "Person",
       "name": "Brighty Jiji Abraham",
-      "description": "Currently a student at Sree Buddha College of Engineering, Pattoor. Studing course B.Tech Computer Science Engineering (Artificial Intelligence & Machine Learnig).",
+      "description": "Currently a student at Sree Buddha College of Engineering, Pattoor. Studying course B.Tech Computer Science Engineering (Artificial Intelligence & Machine Learning).",
       "image": "https://brighty-jiji-abraham.ml/assets/img/profile-img.jpg",
       "gender": "http://schema.org/Male",
       "birthDate": "20 January 2002",
@@ -109,8 +111,8 @@
                 <div class="row padding20">
                   <p>Hiii !</p>
                   <p>I am Brighty Jiji Abraham. Currently a student at Sree Buddha College of Engineering, Pattoor.
-                    Studing
-                    course B.Tech Computer Science Engineering (Artificial Intelligence & Machine Learnig).</p>
+                    Studying
+                    course B.Tech Computer Science Engineering (Artificial Intelligence & Machine Learning).</p>
                   <h3>Address &amp; Details.</h3><br>
                   <div class="col-lg-6">
                     <ul>
