--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 
   <title>Brighty Jiji Abraham</title>
   <meta content="Hi I'm Brighty Jiji Abraham. This is my portfolio." name="description">
-  <meta content="Brighty Jiji Abraham" name="keywords">
+  <meta content="Brighty Jiji Abraham, brighty, b, jiji, jiji abraham, abraham, br, bja, bja008, bright" name="keywords">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Brighty Jiji Abraham">
+  <meta itemprop="description" content="Hi I'm Brighty Jiji Abraham. This is my portfolio.">
+  <meta itemprop="image" content="">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://brighty-jiji-abraham.live">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Brighty Jiji Abraham">
+  <meta property="og:description" content="Hi I'm Brighty Jiji Abraham. This is my portfolio.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Brighty Jiji Abraham">
+  <meta name="twitter:description" content="Hi I'm Brighty Jiji Abraham. This is my portfolio.">
+  <meta name="twitter:image" content="">
+
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737742674511070" crossorigin="anonymous"></script>
 
